--- a/autos-frontend/index.html
+++ b/autos-frontend/index.html
@@ -1,9 +1,10 @@
 <!doctype html>
 <html lang="de">
-
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="cars-project.de " />
+  <!-- <link rel="icon" type="image/x-icon" href="car.png"/> -->
   <title>cars-project</title>
   <style>
     * {
